--- a/Asignement2_BRICE_DENIS/Asignement2_BRICE_DENIS.csproj
+++ b/Asignement2_BRICE_DENIS/Asignement2_BRICE_DENIS.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Patient_Management.cs">
+      <SubType>Form</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
